--- a/.env.txt
+++ b/.env.txt
@@ -1,3 +1,4 @@
+PORT = 4000
 MONGO_URI = 'mongodb+srv://ecommerce-dani:e6100kFQGMEcO31z@eit-ecommerce.pcxcs4u.mongodb.net/ecommerce?retryWrites=true&w=majority'
 
 SECRET = 'Alfabeta'
